--- a/ClusterKit.Core/ClusterKit.Core.Rest/ClusterKit.Core.Rest.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.Rest/ClusterKit.Core.Rest.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\..\packages\Akka.1.0.7.182-beta\lib\net45\Akka.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Akka.Serialization.Wire">
+      <HintPath>..\..\packages\Akka.Serialization.Wire.1.0.7.182-beta\lib\net45\Akka.Serialization.Wire.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="JetBrains.Annotations">
       <HintPath>..\..\packages\JetBrains.Annotations.10.1.2-eap\lib\net20\JetBrains.Annotations.dll</HintPath>
       <Private>True</Private>
@@ -59,6 +63,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Wire">
+      <HintPath>..\..\packages\Wire.0.0.6\lib\Wire.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionMessages\CollectionRequest.cs" />
