--- a/ClusterKit.Core/ClusterKit.Core.Service/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.Service/packages.config
@@ -7,6 +7,7 @@
   <package id="Akka.DI.Core" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.7.154-beta" targetFramework="net45" />
   <package id="Akka.Remote" version="1.0.7.182-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
@@ -29,4 +30,5 @@
   <package id="Topshelf" version="3.3.1" targetFramework="net45" />
   <package id="Topshelf.Linux" version="1.0.12.11" targetFramework="net46" />
   <package id="Topshelf.Serilog" version="3.3.1" targetFramework="net45" />
+  <package id="Wire" version="0.0.6" targetFramework="net45" />
 </packages>
