--- a/ClusterKit.Core/ClusterKit.Core.Tests/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.Tests/packages.config
@@ -8,6 +8,7 @@
   <package id="Akka.DI.TestKit" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.7.154-beta" targetFramework="net45" />
   <package id="Akka.Remote" version="1.0.7.182-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Akka.TestKit" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Akka.TestKit.Xunit2" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
@@ -28,6 +29,7 @@
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="Wire" version="0.0.6" targetFramework="net45" />
   <package id="xunit" version="2.2.0-beta1-build3239" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.2.0-beta1-build3239" targetFramework="net45" />
