--- a/ClusterKit.Core/ClusterKit.Core/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core/packages.config
@@ -7,6 +7,7 @@
   <package id="Akka.DI.Core" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.7.154-beta" targetFramework="net45" />
   <package id="Akka.Remote" version="1.0.7.182-beta" targetFramework="net45" />
+  <package id="Akka.Serialization.Wire" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
@@ -24,4 +25,5 @@
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="Wire" version="0.0.6" targetFramework="net45" />
 </packages>
