--- a/ClusterKit.Core/ClusterKit.Core.EF/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.EF/packages.config
@@ -10,6 +10,8 @@
   <package id="Akka.Serialization.Wire" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Helios" version="1.4.2" targetFramework="net45" />
