--- a/ClusterKit.Core/ClusterKit.Core.Tests/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.Tests/packages.config
@@ -11,6 +11,8 @@
   <package id="Akka.Serialization.Wire" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Akka.TestKit" version="1.0.7.182-beta" targetFramework="net45" />
   <package id="Akka.TestKit.Xunit2" version="1.0.7.182-beta" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
