--- a/Docker/ClusterKitPostgres/Dockerfile
+++ b/Docker/ClusterKitPostgres/Dockerfile
@@ -1,4 +1,4 @@
-FROM postgres:latest
+FROM postgres:9.5.2
 MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
 RUN apt-get update && \
 	apt-get -y upgrade
