--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -5,457 +5,391 @@
   "Packages": [
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Core.EF.Npgsql",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Core.Service",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Monitoring",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.NodeManager",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.NodeManager.Client",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Web.Swagger",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Web.Swagger.Monitor",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka",
-      "Version": "1.0.8.185-beta"
+      "Version": "1.0.9.198-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.Cluster",
-      "Version": "1.0.8.185-beta"
+      "Version": "1.0.9.198-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.Cluster.Sharding",
-      "Version": "1.0.8.185-beta"
+      "Version": "1.0.9.198-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.Cluster.Tools",
-      "Version": "1.0.8.185-beta"
+      "Version": "1.0.9.198-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.DI.CastleWindsor",
-      "Version": "1.0.8.183-beta"
+      "Version": "1.0.8.191-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.DI.Core",
-      "Version": "1.0.8.183-beta"
+      "Version": "1.0.9.198-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.Logger.Serilog",
-      "Version": "1.0.7.154-beta"
+      "Version": "1.0.8.7-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.Persistence",
-      "Version": "1.0.8.185-beta"
+      "Version": "1.0.9.198-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.Remote",
-      "Version": "1.0.8.185-beta"
+      "Version": "1.0.9.198-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Akka.Serialization.Wire",
-      "Version": "1.0.8.183-beta"
+      "Version": "1.0.9.198-beta"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Castle.Core",
       "Version": "3.3.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Castle.Windsor",
       "Version": "3.3.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Core",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Core.Data",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Core.EF",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Core.Rest",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.NodeManager.ConfigurationSource",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.NodeManager.Launcher.Messages",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Web",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Web.Client",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Web.CRUDS",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Web.Descriptor",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Web.SignalR",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "ClusterKit.Web.Swagger.Messages",
       "Version": "0.0.0.0-local"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "CommonServiceLocator",
       "Version": "1.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "CommonServiceLocator.WindsorAdapter",
       "Version": "1.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "EntityFramework",
       "Version": "6.1.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "EntityFramework6.Npgsql",
-      "Version": "3.0.5"
+      "Version": "3.0.7"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Google.ProtocolBuffers",
       "Version": "2.4.1.555"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Helios",
-      "Version": "1.4.2"
+      "Version": "1.4.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "JetBrains.Annotations",
-      "Version": "10.1.2-eap"
+      "Version": "10.1.4"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.Cors",
       "Version": "5.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.Mvc",
       "Version": "5.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.Razor",
       "Version": "3.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.SignalR.Core",
       "Version": "2.2.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.SignalR.Utils",
       "Version": "2.2.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.WebApi.Client",
       "Version": "5.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.WebApi.Core",
       "Version": "5.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.WebApi.Cors",
       "Version": "5.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.WebApi.Owin",
       "Version": "5.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.WebApi.OwinSelfHost",
       "Version": "5.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.AspNet.WebPages",
       "Version": "3.2.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.Bcl.Immutable",
       "Version": "1.0.34"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.Owin",
       "Version": "3.0.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.Owin.Cors",
       "Version": "3.0.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.Owin.Host.HttpListener",
       "Version": "3.0.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.Owin.Hosting",
       "Version": "3.0.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.Owin.Security",
       "Version": "3.0.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.Web.Infrastructure",
       "Version": "1.0.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Microsoft.Web.Xdt",
       "Version": "2.1.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Newtonsoft.Json",
-      "Version": "8.0.2"
+      "Version": "8.0.3"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Npgsql",
-      "Version": "3.0.5"
+      "Version": "3.0.7"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "NuGet.Core",
-      "Version": "2.10.1"
+      "Version": "2.11.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Owin",
       "Version": "1.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Serilog",
-      "Version": "1.5.14"
+      "Version": "2.0.0-beta-541"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
+      "Id": "Serilog.Sinks.ColoredConsole",
+      "Version": "2.0.0-beta-700"
+    },
+    {
+      "BuildDate": null,
+      "Id": "Serilog.Sinks.TextWriter",
+      "Version": "2.0.0-beta-700"
+    },
+    {
+      "BuildDate": null,
       "Id": "Swashbuckle.Core.Net45",
       "Version": "5.2.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Collections",
       "Version": "4.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Collections.Immutable",
       "Version": "1.1.37"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Diagnostics.Debug",
       "Version": "4.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Globalization",
       "Version": "4.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Linq",
       "Version": "4.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Resources.ResourceManager",
       "Version": "4.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Runtime",
       "Version": "4.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Runtime.Extensions",
       "Version": "4.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "System.Threading",
       "Version": "4.0.0"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Topshelf",
       "Version": "3.3.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Topshelf.Linux",
       "Version": "1.0.12.11"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Topshelf.Serilog",
       "Version": "3.3.1"
     },
     {
       "BuildDate": null,
-      "Dependencies": null,
       "Id": "Wire",
       "Version": "0.0.6"
     }
